files/lesson5/svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngnet
  namespace: lesson5
spec:
  ports:
    - name: ngport
      port: 9001
      targetPort: 80
      nodePort: 30901
  selector:
    app: nginx
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: mtnet
  namespace: lesson5
spec:
  ports:
    - name: mtport
      port: 9002
      targetPort: 8080
      nodePort: 30902
  selector:
    app: mttool
  type: NodePort
